found bugs, squashed bugs.

--- a/index.css
+++ b/index.css
@@ -148,9 +148,10 @@ li {
 /* main */
 /* landing */
 img {
-    height: 300px;
-    width: 300px;
+    height: 400px;
+    width: 400px;
     border-radius: 50%;
+    padding: 50px 50px;
 }
 
 .main__landing-hero {
@@ -161,7 +162,6 @@ img {
     justify-content: center;
     gap: 20px;
     margin-bottom: 2rem;
-    height: 80vh;
 }
 
 .main__landing-hero img {
@@ -219,6 +219,7 @@ img {
     height: 100%;
     max-width: 100px;
     transition: all 300ms;
+    padding: 0px;
 }
 
 .language:hover .language__img {
